--- a/src/styles/blocks/explore.scss
+++ b/src/styles/blocks/explore.scss
@@ -7,15 +7,17 @@
   }
 
   &__block {
+    color: $color-main-dark;
     transition: all $transition;
+    overflow: hidden;
 
     &:not(:last-child) {
       margin-bottom: 48px;
     }
 
     &:hover {
-      // box-shadow: 10px 5px 5px $color-bc-unactive;
-      transform: scale(1.1);
+      transform: scale(1.05);
+      z-index: 1;
     }
   }
 
@@ -38,5 +40,6 @@
   &__info {
     font-family: "Roboto", sans-serif;
     text-align: center;
+    color: inherit;
   }
 }
