--- a/src/styles/blocks/form.scss
+++ b/src/styles/blocks/form.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
+  overflow: hidden;
 
   &__input {
     background-color: $color-gray-light;
