--- a/src/styles/blocks/museum-hours.scss
+++ b/src/styles/blocks/museum-hours.scss
@@ -1,4 +1,6 @@
 .museum-hours {
+  overflow: hidden;
+  
   &__shedule {
     display: grid;
     grid-template-columns: repeat(2, max-content);
