--- a/src/styles/blocks/now-on-view.scss
+++ b/src/styles/blocks/now-on-view.scss
@@ -41,7 +41,8 @@
     margin-bottom: 24px;
 
     &:hover {
-      transform: scale(1.1);
+      transform: scale(1.05);
+      z-index: 1;
       box-shadow: 10px 5px 5px $color-bc-unactive;
     }
 
