--- a/src/styles/utils/_normalize.scss
+++ b/src/styles/utils/_normalize.scss
@@ -21,3 +21,16 @@ input,
 textarea {
   font-family: inherit;
 }
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  --webkit-box-shadow: 0 0 0 1000px $color-gray-light inset;
+  transition: background-color 5000s ease-in-out 0s;
+}
